--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 /* Common Style*/
 * {
   margin: 0;
@@ -6,5 +9,10 @@
   text-decoration: none;
   list-style-type: none;
   outline: none;
+  font-family: "Jura", sans-serif;
+}
+
+html {
+  font-size: 62.5%;
 }
 /* End of Common Style*/
