--- a/style.css
+++ b/style.css
@@ -15,4 +15,16 @@
 html {
   font-size: 62.5%;
 }
+
 /* End of Common Style*/
+
+/* Page Background */
+.page-background {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(./images/bg.jpg) center no-repeat;
+  background-size: cover;
+}
+
+/* End of Page Background */
