add mouse circle

--- a/style.css
+++ b/style.css
@@ -19,13 +19,24 @@ html {
 /* End of Common Style*/
 
 /* Mouse Circle */
+.mouse-circle,
+.mouse-dot {
+  border-radius: 50%;
+  position: fixed;
+  z-index: 300;
+}
+
 .mouse-circle {
   width: 6rem;
   height: 6rem;
   border: 0.1rem solid #c7a622;
-  border-radius: 50%;
-  position: fixed;
-  z-index: 300;
+
+}
+
+.mouse-dot {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #9b0e0e;
 }
 
 /* End of Mouse Circle */
