style mouse circle

--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@ html {
   border-radius: 50%;
   position: fixed;
   z-index: 300;
+  transform: translate(-50%, -50%);
 }
 
 .mouse-circle {
   width: 6rem;
   height: 6rem;
   border: 0.1rem solid #c7a622;
-
 }
 
 .mouse-dot {
