added mouse circle animation

--- a/style.css
+++ b/style.css
@@ -31,6 +31,34 @@ html {
   width: 6rem;
   height: 6rem;
   border: 0.1rem solid #c7a622;
+  animation: mouseCircleAnim 10s infinite linear;
+}
+
+@keyframes mouseCircleAnim {
+  0% {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  25% {
+    width: 8rem;
+    height: 8rem;
+  }
+
+  35% {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  70% {
+    width: 8rem;
+    height: 8rem;
+  }
+
+  100% {
+    width: 6rem;
+    height: 6rem;
+  }
 }
 
 .mouse-dot {
