--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ html {
   font-size: 62.5%;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* End of Common Style*/
 
 /* Mouse Circle */
@@ -98,3 +104,88 @@ html {
 }
 
 /* End of Page Background */
+
+/* Section 1 */
+.section-1 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+/* Logo */
+.logo {
+  position: absolute;
+  top: 2rem;
+  left: 5rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+/* End of Logo*/
+
+/* Animated Cirlces */
+.circles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.circle {
+  width: 22rem;
+  height: 22rem;
+  border-radius: 50%;
+  background-color: red;
+  align-self: center;
+  justify-self: center;
+  opacity: .5;
+}
+
+.circle-1 {
+  background: url(./images/landing/circle-1-img.jpg) center no-repeat;
+  background-size: cover;
+  background-clip: content-box;
+  border: 0.5rem dotted #a14b1a;
+}
+
+.circle-2 {
+  background: url(./images/landing/circle-2-img.jpg) center no-repeat;
+  background-size: cover;
+  background-clip: content-box;
+  border: 0.5rem dashed #ffbd07;
+}
+
+.circle-3 {
+  background: url(./images/landing/circle-3-img.jpg) center no-repeat;
+  background-size: cover;
+  background-clip: content-box;
+  border: 1rem double #9b0e0e;
+}
+
+.circle-4 {
+  background: url(./images/landing/circle-4-img.jpg) center no-repeat;
+  background-size: cover;
+  background-clip: content-box;
+  border: 0.7rem double #fff;
+}
+
+.main-circle {
+  width: 55rem;
+  height: 55rem;
+  position: absolute;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.main-circle img {
+  mix-blend-mode: color-dodge;
+}
+
+/* End of Animated Cirlces */
+
+/* End of Section 1 */
