--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@ html {
   align-self: center;
   justify-self: center;
   opacity: .5;
+  position: relative;
+  top: 0;
+  left: 0;
+  transition: left 2s, top 2s;
 }
 
 .circle-1 {
@@ -184,6 +188,10 @@ html {
 
 .main-circle img {
   mix-blend-mode: color-dodge;
+  position: relative;
+  top: 0;
+  left: 0;
+  transition: left 2s, top 2s;
 }
 
 /* End of Animated Cirlces */
