--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html {
   z-index: 300;
   transform: translate(-50%, -50%);
   opacity: 0;
+  pointer-events: none;
 }
 
 .mouse-circle {
@@ -155,6 +156,7 @@ html {
   background-size: cover;
   background-clip: content-box;
   border: 0.5rem dotted #a14b1a;
+  margin-left: -10rem;
 }
 
 .circle-2 {
@@ -162,6 +164,7 @@ html {
   background-size: cover;
   background-clip: content-box;
   border: 0.5rem dashed #ffbd07;
+  margin-right: -10rem;
 }
 
 .circle-3 {
@@ -169,6 +172,7 @@ html {
   background-size: cover;
   background-clip: content-box;
   border: 1rem double #9b0e0e;
+  margin-left: -10rem;
 }
 
 .circle-4 {
@@ -176,6 +180,7 @@ html {
   background-size: cover;
   background-clip: content-box;
   border: 0.7rem double #fff;
+  margin-right: -10rem;
 }
 
 .main-circle {
@@ -184,6 +189,12 @@ html {
   position: absolute;
   overflow: hidden;
   border-radius: 50%;
+  transition: width 0.2s, height 0.2s;
+}
+
+.main-circle:hover {
+  width: 75rem;
+  height: 75rem;
 }
 
 .main-circle img {
@@ -202,7 +213,7 @@ html {
   color: #fff;
   text-transform: uppercase;
   width: 0;
-  /* word-wrap: break-word; */
+  word-wrap: break-word;
   line-height: 3.5;
   position: sticky;
   top: 0;
@@ -222,5 +233,61 @@ html {
 }
 
 /* End of Featured Text */
+
+/* Main Buttom */
+.main-btn {
+  position: absolute;
+  bottom: 3rem;
+  width: 13rem;
+  height: 13rem;
+  background-color: #9b0e0e;
+  border-radius: 50%;
+  border: 0.2rem dotted #fff;
+  padding: 0.1rem;
+}
+
+.main-btn-content {
+  width: 100%;
+  height: 100%;
+  border: 0.2rem dotted #e7be08;
+  border-radius: 50%;
+  transform: rotate(40deg);
+}
+
+.main-btn-line {
+  position: absolute;
+  top: 4rem;
+  width: 3rem;
+  height: 0.5rem;
+  border: 0.1rem solid #fff;
+}
+
+.main-btn-line:nth-child(1) {
+  transform: rotateZ(-45deg)translateX(-0.65rem);
+  transform-origin: left center;
+  border-right: none;
+}
+
+.main-btn-line:nth-child(2) {
+  transform: rotateZ(45deg)translateX(0.65rem);
+  transform-origin: right center;
+  border-left: none;
+}
+
+.main-btn-line:nth-child(3) {
+  transform: rotateZ(90deg)translate(.5rem);
+  border-left: none;
+}
+
+.main-btn span {
+  position: absolute;
+  bottom: 3rem;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+/* End of Main Buttom */
 
 /* End of Section 1 */
