--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ html {
   border-radius: 50%;
   border: 0.2rem dotted #fff;
   padding: 0.1rem;
+  overflow: hidden;
 }
 
 .main-btn-content {
@@ -252,6 +253,13 @@ html {
   border: 0.2rem dotted #e7be08;
   border-radius: 50%;
   transform: rotate(40deg);
+  transition: transform .2s, border .2s;
+}
+
+.main-btn:hover .main-btn-content {
+  transform: rotate(60deg);
+  border: .2rem dotted #9b0e0e;
+  transition: transform .2s .5s, border .2s;
 }
 
 .main-btn-line {
@@ -286,6 +294,28 @@ html {
   font-size: 1.1rem;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+.ripple {
+  position: absolute;
+  width: 0;
+  height: 0;
+  background-color: #e7be08;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: rippleAnim 0.5s forwards;
+}
+
+@keyframes rippleAnim {
+  0% {
+    width: 0;
+    height: 0;
+  }
+
+  100% {
+    width: 210%;
+    height: 210%;
+  }
 }
 
 /* End of Main Buttom */
