--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   list-style-type: none;
   outline: none;
   font-family: "Jura", sans-serif;
-  cursor: default;
 }
 
 html {
@@ -304,6 +303,7 @@ html {
   line-height: 3.5;
   position: sticky;
   top: 0;
+  cursor: default;
 }
 
 .featured-text-1 {
@@ -363,6 +363,7 @@ html {
   text-shadow: 0 0 0 1rem #9b0e0e;
   position: relative;
   mix-blend-mode: color-dodge;
+  cursor: default;
 }
 
 @keyframes aboutMeTextAnim {
@@ -394,3 +395,91 @@ html {
 
 /* End of About Me Text */
 /* End of Section 2 */
+
+/* Section 3 */
+.section-3 {
+  width: 100%;
+  height: 100%;
+  padding: 20rem 0 10rem 0;
+  position: relative;
+}
+
+/* Projects */
+.projects {
+  flex-wrap: wrap;
+  padding-bottom: 15rem;
+}
+
+.project {
+  width: 40rem;
+  height: 45rem;
+  overflow: hidden;
+  margin: 5rem;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  border: 0.2rem dotted #9b0e0e;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  perspective: 20rem;
+}
+
+.project img {
+  width: 90%;
+  object-fit: cover;
+  position: absolute;
+  top: 2rem;
+  opacity: .5;
+  transition: top 4s 0.2s, opacity 0.2s;
+}
+
+.project:nth-child(odd):hover img {
+  animation: oddImgAnim 4s 0.2s;
+  opacity: 1;
+}
+
+@keyframes oddImgAnim {
+  0% {
+    transform: rotateY(0);
+  }
+
+  25% {
+    transform: rotateY(-2deg) rotateX(2deg);
+  }
+
+  50% {
+    transform: rotateY(2deg) rotateX(-2deg);
+  }
+
+  100% {
+    transform: rotateY(0);
+  }
+}
+
+.project:nth-child(even):hover img {
+  animation: evenImgAnim 4s 0.2s;
+  opacity: 1;
+}
+
+@keyframes evenImgAnim {
+  0% {
+    transform: rotateY(0);
+  }
+
+  25% {
+    transform: rotateY(2deg) rotateX(-2deg);
+  }
+
+  50% {
+    transform: rotateY(-2deg) rotateX(2deg);
+  }
+
+  100% {
+    transform: rotateY(0);
+  }
+}
+
+/* End of Projects */
+
+/* End of Section 3 */
