--- a/style.css
+++ b/style.css
@@ -400,7 +400,8 @@ html {
 .section-3 {
   width: 100%;
   height: 100%;
-  padding: 20rem 0 10rem 0;
+  padding: 10rem 0;
+  margin-top: 10rem;
   position: relative;
 }
 
