--- a/style.css
+++ b/style.css
@@ -481,6 +481,29 @@ html {
   }
 }
 
+/* Big Project Image*/
+.project-img-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  animation: imgWrapperAnim 1s forwards;
+}
+
+@keyframes imgWrapperAnim {
+  0% {
+    height: 0%;
+  }
+
+  100% {
+    height: 100%;
+  }
+}
+
+/* End of Big Project Image*/
+
 /* End of Projects */
 
 /* End of Section 3 */
