--- a/style.css
+++ b/style.css
@@ -547,7 +547,27 @@ html {
 }
 
 /* End of Project Hide Button */
+.projects-btn {
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.change>.main-btn-line:nth-child(1) {
+  transform: rotateZ(45deg) translateX(-.65rem);
+}
+
+.change>.main-btn-line:nth-child(2) {
+  transform: rotateZ(-45deg) translateX(.65rem);
+}
+
+.change>.main-btn-line:nth-child(3) {
+  transform: rotateZ(90deg) translateX(-.5rem);
+  border-left: .1rem solid #fff;
+  border-right: none;
+}
 
 /* End of Projects */
 
+/* Projects Button */
+/* End of Projects Button */
 /* End of Section 3 */
