--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 .center {
@@ -107,6 +108,23 @@ html {
 }
 
 /* End of Main Button */
+
+/* Section Heading */
+.section-heading {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #fff;
+  text-transform: uppercase;
+  position: absolute;
+  top: 50%;
+  left: 10rem;
+  transform: translateY(-50%);
+  width: 0;
+  word-break: break-all;
+  line-height: 4;
+}
+
+/* End of Section Heading */
 
 /* End of Common Style*/
 
@@ -330,23 +348,6 @@ html {
   padding: 10rem 10rem 15rem 10rem;
 }
 
-/* Section 2 Heading */
-.section-2-heading {
-  font-size: 2rem;
-  font-weight: 300;
-  color: #fff;
-  text-transform: uppercase;
-  position: absolute;
-  top: 50%;
-  left: 10rem;
-  transform: translateY(-50%);
-  width: 0;
-  word-break: break-all;
-  line-height: 4;
-}
-
-/* End of Section 2 Heading */
-
 /* About Me Text */
 .about-me-text {
   width: 80%;
@@ -424,6 +425,7 @@ html {
   border-radius: 0.5rem;
   cursor: pointer;
   perspective: 20rem;
+  transition: opacity .5s;
 }
 
 .project img {
@@ -550,6 +552,10 @@ html {
 .projects-btn {
   left: 50%;
   transform: translate(-50%);
+}
+
+.projects-btn .main-btn-line {
+  transition: all 0.5s;
 }
 
 .change>.main-btn-line:nth-child(1) {
