--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* Common Style*/
 * {
@@ -9,7 +9,7 @@
   text-decoration: none;
   list-style-type: none;
   outline: none;
-  font-family: "Jura", sans-serif;
+  font-family: 'Jura', sans-serif;
 }
 
 html {
@@ -361,7 +361,7 @@ html {
   color: #aaa;
   letter-spacing: 0.5rem;
   line-height: 0.9;
-  text-shadow: 0 0 0 1rem #9b0e0e;
+  text-shadow: 0 0 1rem #9b0e0e;
   position: relative;
   mix-blend-mode: color-dodge;
   cursor: default;
@@ -572,8 +572,41 @@ html {
   border-right: none;
 }
 
-/* End of Projects */
-
-/* Projects Button */
 /* End of Projects Button */
 /* End of Section 3 */
+
+
+/* Section 4 */
+.section-4 {
+  position: relative;
+  width: 100%;
+}
+
+/* Skills */
+.skills-wrapper {
+  width: 100%;
+  flex-direction: column;
+}
+
+.skill {
+  width: 70%;
+  margin: 2rem 0;
+  border-bottom: .5rem solid #9b0e0e;
+}
+
+.skill-btn {
+  width: 100%;
+}
+
+.skill-btn span {
+  font-family: 'Poppins', sans-serif;
+  font-size: 10rem;
+  font-style: italic;
+  font-weight: bold;
+  color: #9b0e0e;
+
+}
+
+/* End of Skills */
+
+/* End of Section 4 */
