--- a/style.css
+++ b/style.css
@@ -637,6 +637,7 @@ html {
 .section-5 {
   position: relative;
   height: 100vh;
+  flex-direction: column;
 }
 
 /* Form */
@@ -665,6 +666,7 @@ html {
   color: #aaa;
   letter-spacing: 0.1rem;
   height: 5rem;
+  cursor: default;
 }
 
 .contact-form-textarea {
@@ -680,8 +682,48 @@ html {
   align-self: flex-start;
   font-size: 1.8rem;
   color: #fff;
+  cursor: pointer;
 }
 
 /* End of Form */
+
+/* Slideshow */
+.slideshow {
+  display: flex;
+  width: 50rem;
+  margin-top: 10rem;
+  padding: 0 2rem;
+}
+
+.slideshow-link {
+  width: 20%;
+  filter: brightness(.5);
+  transition: filter 1.5s;
+}
+
+.slideshow-link:nth-child(1),
+.slideshow-link:nth-child(5) {
+  transition: width 0.5s, opacity 0.5s;
+}
+
+.slideshow-link:nth-child(3) {
+  transition: filter .5s;
+}
+
+.slideshow-link img {
+  width: 100%;
+  padding: 0 1rem;
+}
+
+.faded-out {
+  opacity: 0;
+  width: 0;
+}
+
+.light {
+  filter: brightness(1.5);
+}
+
+/* Slideshow */
 
 /* End of Section 5 */
