--- a/style.css
+++ b/style.css
@@ -619,6 +619,8 @@ html {
   height: 0;
   background-color: rgba(0, 0, 0, 0.9);
   overflow: hidden scroll;
+  z-index: 100;
+  scroll-behavior: smooth;
   animation: imgWrapperAnim 1s forwards;
 }
 
@@ -637,6 +639,7 @@ html {
   border-radius: 0.5rem;
   padding: 7rem 20rem;
   opacity: 0.9;
+  display: block;
   transform-origin: top center;
   animation: imgAnim 1s 1s both;
 }
@@ -664,7 +667,7 @@ html {
   font-size: 2rem;
   letter-spacing: .1rem;
   cursor: pointer;
-  z-index: 10;
+  z-index: 200;
   transform: scale(0);
   visibility: hidden;
 }
