--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ html {
   word-break: break-all;
   line-height: 4;
 
-  
+
 }
 
 /* End of Section Heading */
@@ -315,7 +315,8 @@ html {
   font-weight: 700;
   text-transform: uppercase;
   color: #fff;
-  margin: 0 2.5rem;
+  margin: 0 1.5rem;
+  padding: 1rem;
   text-shadow: 0 0.3rem 0.5rem #000;
 }
 
