--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   text-decoration: none;
   list-style-type: none;
   outline: none;
-  font-family: 'Jura', sans-serif;
+  font-family: "Jura", sans-serif;
 }
 
 html {
@@ -42,13 +42,13 @@ html {
   border: 0.2rem dotted #e7be08;
   border-radius: 50%;
   transform: rotate(40deg);
-  transition: transform .2s, border .2s;
+  transition: transform 0.2s, border 0.2s;
 }
 
 .main-btn:hover .main-btn-content {
   transform: rotate(60deg);
-  border: .2rem dotted #9b0e0e;
-  transition: transform .2s .5s, border .2s;
+  border: 0.2rem dotted #9b0e0e;
+  transition: transform 0.2s 0.5s, border 0.2s;
 }
 
 .main-btn-line {
@@ -60,19 +60,19 @@ html {
 }
 
 .main-btn-line:nth-child(1) {
-  transform: rotateZ(-45deg)translateX(-0.65rem);
+  transform: rotateZ(-45deg) translateX(-0.65rem);
   transform-origin: left center;
   border-right: none;
 }
 
 .main-btn-line:nth-child(2) {
-  transform: rotateZ(45deg)translateX(0.65rem);
+  transform: rotateZ(45deg) translateX(0.65rem);
   transform-origin: right center;
   border-left: none;
 }
 
 .main-btn-line:nth-child(3) {
-  transform: rotateZ(90deg)translate(.5rem);
+  transform: rotateZ(90deg) translate(0.5rem);
   border-left: none;
 }
 
@@ -122,8 +122,6 @@ html {
   width: 0;
   word-break: break-all;
   line-height: 4;
-
-
 }
 
 /* End of Section Heading */
@@ -206,7 +204,8 @@ html {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(./images/bg.jpg) center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/bg.jpg) center no-repeat;
   background-size: cover;
 }
 
@@ -261,7 +260,7 @@ html {
   color: #fff;
   font-size: 4rem;
   z-index: 200;
-  transition: transform .5s;
+  transition: transform 0.5s;
   pointer-events: none;
 }
 
@@ -281,7 +280,7 @@ html {
   z-index: 100;
   cursor: pointer;
   transform: translate(-50%, -50%);
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 
 .menu-icon-line {
@@ -307,7 +306,7 @@ html {
   justify-content: flex-end;
   padding-right: 3rem;
   z-index: 100;
-  transition: opacity .5s, visibility .5s, transform 0.5s;
+  transition: opacity 0.5s, visibility 0.5s, transform 0.5s;
 }
 
 .navbar-link {
@@ -366,7 +365,7 @@ html {
   border-radius: 50%;
   align-self: center;
   justify-self: center;
-  opacity: .5;
+  opacity: 0.5;
   position: relative;
   top: 0;
   left: 0;
@@ -457,7 +456,6 @@ html {
 
 /* End of Featured Text */
 
-
 /* End of Section 1 */
 
 /* Section 2 */
@@ -473,7 +471,7 @@ html {
 }
 
 .about-me-text span {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15rem;
   font-weight: bold;
   color: #aaa;
@@ -495,7 +493,7 @@ html {
   10%,
   90% {
     color: #fff;
-    top: 2rem; 
+    top: 2rem;
   }
 
   100% {
@@ -544,7 +542,7 @@ html {
   border-radius: 0.5rem;
   cursor: pointer;
   perspective: 20rem;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
 
 .project img {
@@ -552,7 +550,7 @@ html {
   object-fit: cover;
   position: absolute;
   top: 2rem;
-  opacity: .5;
+  opacity: 0.5;
   pointer-events: none;
   transition: top 4s 0.2s, opacity 0.2s;
 }
@@ -658,7 +656,7 @@ html {
   border: none;
   color: #fff;
   font-size: 2rem;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   cursor: pointer;
   z-index: 200;
   transform: scale(0);
@@ -681,23 +679,22 @@ html {
   transition: all 0.5s;
 }
 
-.change>.main-btn-line:nth-child(1) {
-  transform: rotateZ(45deg) translateX(-.65rem);
+.change > .main-btn-line:nth-child(1) {
+  transform: rotateZ(45deg) translateX(-0.65rem);
 }
 
-.change>.main-btn-line:nth-child(2) {
-  transform: rotateZ(-45deg) translateX(.65rem);
+.change > .main-btn-line:nth-child(2) {
+  transform: rotateZ(-45deg) translateX(0.65rem);
 }
 
-.change>.main-btn-line:nth-child(3) {
-  transform: rotateZ(90deg) translateX(-.5rem);
-  border-left: .1rem solid #fff;
+.change > .main-btn-line:nth-child(3) {
+  transform: rotateZ(90deg) translateX(-0.5rem);
+  border-left: 0.1rem solid #fff;
   border-right: none;
 }
 
 /* End of Projects Button */
 /* End of Section 3 */
-
 
 /* Section 4 */
 .section-4 {
@@ -714,7 +711,7 @@ html {
 .skill {
   width: 70%;
   margin: 2rem 0;
-  border-bottom: .5rem solid #9b0e0e;
+  border-bottom: 0.5rem solid #9b0e0e;
 }
 
 .skill-btn {
@@ -725,7 +722,7 @@ html {
 }
 
 .skill-btn span {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 10rem;
   font-style: italic;
   font-weight: bold;
@@ -739,11 +736,11 @@ html {
 .skill-text {
   font-size: 5rem;
   color: #777;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   height: 0;
   visibility: hidden;
   opacity: 0;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .change.skill-text {
@@ -772,7 +769,7 @@ html {
   color: #9b0e0e;
   letter-spacing: 0.3rem;
   margin-bottom: 3rem;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
 }
 
 .contact-form {
@@ -783,8 +780,8 @@ html {
   width: 60rem;
   padding: 0.5rem;
   margin: 1rem 0;
-  background-color: rgba(255, 255, 255, .1);
-  border: .1rem solid #9b0e0e;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 0.1rem solid #9b0e0e;
   font-size: 1.7rem;
   font-weight: bold;
   color: #aaa;
@@ -815,11 +812,11 @@ html {
   font-weight: 700;
   color: #f55e5e;
   text-transform: uppercase;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   margin: 0 auto 1rem 0;
   visibility: hidden;
   opacity: 0;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
 }
 
 .error.message {
@@ -841,7 +838,7 @@ html {
 
 .slideshow-link {
   width: 20%;
-  filter: brightness(.5);
+  filter: brightness(0.5);
   transition: filter 1.5s;
 }
 
@@ -851,7 +848,7 @@ html {
 }
 
 .slideshow-link:nth-child(3) {
-  transition: filter .5s;
+  transition: filter 0.5s;
 }
 
 .slideshow-link img {
